--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	  <div class="hero-content">
 	  	<h2>Go Green with Gas or Electric</h2>
 	  	<p>Modernize your fleet and streamline operations with Avro's baggage tractors, tow tractor and belt loaders.</p>
-	  	<a href="#">Read More</a>
+	  	<a href="#" class="btn btn-big btn-hollow">Read More</a>
 	  </div>
 	</div>
 	<div class="main-content">
