--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	    <div class="collapse navbar-collapse" id="alignment-example">
 				<div class="navbar-top">
 	    		<ul class="nav">
-	    			<li><a href="#"><img src="images/resources/icons/header-avrotracker.png" style="width: 25px"> Avro Tracker</a></li>
-	    			<li><a href="#"><img src="images/resources/icons/dollar-sign.svg"> Request a Quote</a></li>
-	    			<li><a href="#"><img src="images/resources/icons/phone.svg"> 877.602.2159</a></li>
+	    			<li><a href="https://www.avro-tracker.com/Login.aspx?ReturnUrl=%2f"><img src="images/resources/icons/header-avrotracker.png" style="width: 25px"> Avro Tracker</a></li>
+	    			<li><a href="https://info.avrogse.com/get-a-quote"><img src="images/resources/icons/dollar-sign.svg"> Request a Quote</a></li>
+	    			<li><a href="tel:18776022159"><img src="images/resources/icons/phone.svg"> 877.602.2159</a></li>
 	    		</ul>
 	    	</div>
 				<!-- Links -->
@@ -89,7 +89,7 @@
 	  <div class="hero-content">
 	  	<h2>Go Green with Gas or Electric</h2>
 	  	<p>Modernize your fleet and streamline operations with Avro's baggage tractors, tow tractor and belt loaders.</p>
-	  	<a href="#" class="btn btn-big btn-hollow">Read More</a>
+	  	<a href="https://avrogse.com/product-category/equipment/" class="btn btn-big btn-hollow">Read More</a>
 	  </div>
 	  <div class="overlay">
 	  	<video id="hero-video" poster="images/resources/video-poster-1.jpg" autoplay muted loop>
@@ -107,7 +107,7 @@
 	    	<div class="col-md-6">
 	    		<h2 class="section-heading">Aircraft Ground Support Equipment Sales, Service, and Customer Satisfaction</h2>
 	    		<p>As one of North America’s premier full-service ground handling equipment suppliers, with a nearly 30-year history of equipment sales and support, we know the urgency of reducing downtime and we understand the pressing need for immediate support and service. For ground handlers and major airlines who are facing tighter deadlines, increased turnarounds and increasing pressure to meet on time departures, Avro GSE offers innovative and cost effective solutions with leading-edge GSE equipment, a comprehensive fleet management system, and maintenance packages that enable our customers to service the most demanding environments, safely and efficiently.</p>
-	    		<a href="#" class="link--arrowed">Read More <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
+	    		<a href="https://avrogse.com/about" class="link--arrowed">Read More <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
 	    	</div>
 	    </div>
 	  </section>
@@ -116,7 +116,7 @@
 	  		<div class="masonry-module">
 	  			<div class="tiles tiles--desktop">
 	  				<div class="column">
-	  					<a href="#" class="tile">
+	  					<a href="https://avrogse.com/product-category/equipment/" class="tile">
 	  						<div class="tile__image">
                   <img src="images/resources/service-equipment.png" alt="Avro Equipment">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -132,7 +132,7 @@
 	  					</a>
 	  				</div>
 	  				<div class="column">
-	  					<a href="#" class="tile">
+	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile">
 	  						<div class="tile__image">
                   <img src="images/resources/service-parts.png" alt="Service & Parts">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
 	  					</a>
-	  					<a href="#" class="tile">
+	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/" class="tile">
 	  						<div class="tile__image">
                   <img src="images/resources/service-roi-calc.png" alt="ROI Calculator">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -162,7 +162,7 @@
 	  					</a>
 	  				</div>
 	  				<div class="column">
-	  					<a href="#" class="tile">
+	  				<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile">
 	  						<div class="tile__image">
                   <img src="images/resources/service-avro-tracker.png" alt="Avro Tracker">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -253,7 +253,15 @@
 			  	<div class="eqt-subcategory subcategory-telematics hide-class"> 
 						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
 							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
-							<h4>Baggage Tractor</h4>
+							<h4>Level I</h4>
+						</div>
+						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
+							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
+							<h4>Level II</h4>
+						</div>
+						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
+							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
+							<h4>Level III</h4>
 						</div>
 					</div>
 			  </div>
@@ -264,7 +272,7 @@
 			  				<div class="eqt-details sec-padding" style="text-align: left; color:#fff;padding-left: 5rem"> 
 				  				<span class="eqt--type" style="display: inline-block;font-weight: bold;text-transform: uppercase;font-size: 2rem">Baggage Tractor</span>
 				  				<h3 class="eqt--name" style="font-size: 7rem; color:#fff">XT560</h3>
-				  				<a class="btn big btn-primary" href="#" style="background: #fff;">Learn More</a>
+				  				<a class="btn big btn-primary" href="https://avrogse.com/product/5600lb-mdp-gasoline-baggage-tractor/" style="background: #fff;">Learn More</a>
 				  				<div class="eqt--related">
 				  					<a href="#" class="btn btn-hollow">XT570D</a><a href="#" class="btn btn-hollow">4,700LB MDP</a>
 				  					<a href="#" class="btn btn-hollow">ST470LA</a><a href="#" class="btn btn-hollow">XT500LI</a>
