--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<title>Avro GSE</title>
 </head>
 <body>
@@ -101,10 +102,10 @@
 	<div class="main-content">
 	  <section class="row sec-padding">
 	    <div class="container equalize-vertical-center">
-	    	<div class="col-md-6"> 
+	    	<div class="col-md-6" data-aos="fade-right"> 
 		      <img src="images/resources/about.png">
 	    	</div>
-	    	<div class="col-md-6">
+	    	<div class="col-md-6" data-aos="fade-left">
 	    		<h2 class="section-heading">Aircraft Ground Support Equipment Sales, Service, and Customer Satisfaction</h2>
 	    		<p>As one of North America’s premier full-service ground handling equipment suppliers, with a nearly 30-year history of equipment sales and support, we know the urgency of reducing downtime and we understand the pressing need for immediate support and service. For ground handlers and major airlines who are facing tighter deadlines, increased turnarounds and increasing pressure to meet on time departures, Avro GSE offers innovative and cost effective solutions with leading-edge GSE equipment, a comprehensive fleet management system, and maintenance packages that enable our customers to service the most demanding environments, safely and efficiently.</p>
 	    		<a href="https://avrogse.com/about" class="link--arrowed">Read More <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
@@ -191,88 +192,80 @@
 		  	</div>
 		  	<div class="eqt-thumbs">
 			  	<div class="eqt-subcategory subcategory-powered show-class"> 
-						<div class="eqt-class" role="button" tabindex="0" target="eqt-baggage-tractor">
-							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
-							<h4>Baggage Tractor</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" target="eqt-belt-loader">
-							<img src="images/eqt-hero/thumbs/belt-loader.jpg" alt="Belt Loader">
-							<h4>Belt Loader</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" target="eqt-cargo-loader">
-							<img src="images/eqt-hero/thumbs/cargo-loader.jpg" alt="Cargo Loader">
-							<h4>Cargo Loader</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" target="eqt-forklift">
-							<img src="images/eqt-hero/thumbs/forklift.jpg" alt="Fork Lift">
-							<h4>Fork Lift</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" target="eqt-pushback">
-							<img src="images/eqt-hero/thumbs/pushback.jpg" alt="Pushback Tractor">
-							<h4>Pushback Tractor</h4>
-						</div>
+					<div class="eqt-class" role="button" tabindex="0" target="eqt-baggage-tractor">
+						<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
+						<h4>Baggage Tractor</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0" target="eqt-belt-loader">
+						<img src="images/eqt-hero/thumbs/belt-loader.jpg" alt="Belt Loader">
+						<h4>Belt Loader</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0" target="eqt-cargo-loader">
+						<img src="images/eqt-hero/thumbs/cargo-loader.jpg" alt="Cargo Loader">
+						<h4>Cargo Loader</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0" target="eqt-forklift">
+						<img src="images/eqt-hero/thumbs/forklift.jpg" alt="Fork Lift">
+						<h4>Fork Lift</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0" target="eqt-pushback">
+						<img src="images/eqt-hero/thumbs/pushback.jpg" alt="Pushback Tractor">
+						<h4>Pushback Tractor</h4>
+					</div>
 			  	</div>
 			  	<div class="eqt-subcategory subcategory-non-powered hide-class"> 
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/baggage-cart.jpg" alt="Baggage Cart">
-							<h4>Baggage Cart</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/bottle-service.jpg" alt="Bottle Service">
-							<h4>Bottle Service</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/cargo-dollies.jpg" alt="Cargo Dollies">
-							<h4>Cargo Dollies</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/fuel-service.jpg" alt="Fuel Service">
-							<h4>Fuel Service</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/fuel-storage.jpg" alt="Fuel Storage">
-							<h4>Fuel Storage</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/human-remains.jpg" alt="Human Remains">
-							<h4>Human Remains</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/lavatory-service.jpg" alt="Lavatory Service">
-							<h4>Lavatory Service</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/trash-service.jpg" alt="Trash Service">
-							<h4>Trash Service</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0">
-							<img src="images/eqt-hero/thumbs/water-service.jpg" alt="Water Service">
-							<h4>Water Service</h4>
-						</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/baggage-cart.jpg" alt="Baggage Cart">
+						<h4>Baggage Cart</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/bottle-service.jpg" alt="Bottle Service">
+						<h4>Bottle Service</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/cargo-dollies.jpg" alt="Cargo Dollies">
+						<h4>Cargo Dollies</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/fuel-service.jpg" alt="Fuel Service">
+						<h4>Fuel Service</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/fuel-storage.jpg" alt="Fuel Storage">
+						<h4>Fuel Storage</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/human-remains.jpg" alt="Human Remains">
+						<h4>Human Remains</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/lavatory-service.jpg" alt="Lavatory Service">
+						<h4>Lavatory Service</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/trash-service.jpg" alt="Trash Service">
+						<h4>Trash Service</h4>
+					</div>
+					<div class="eqt-class" role="button" tabindex="0">
+						<img src="images/eqt-hero/thumbs/water-service.jpg" alt="Water Service">
+						<h4>Water Service</h4>
+					</div>
 			  	</div>
 			  	<div class="eqt-subcategory subcategory-telematics hide-class"> 
-						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
-							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
-							<h4>Level I</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
-							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
-							<h4>Level II</h4>
-						</div>
-						<div class="eqt-class" role="button" tabindex="0" style="display: block;">
-							<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
-							<h4>Level III</h4>
-						</div>
-					</div>
-			  </div>
-			  <div style="background: url('images/eqt-hero/hero/eqt-hero-bg.jpg'); background-size:cover">
+					<div class="eqt-class" role="button" tabindex="0" style="display: block;">
+						<img src="images/eqt-hero/thumbs/baggage-tractor.jpg" alt="Baggage Tractor">
+						<h4>Fleet Management System</h4>
+					</div>						
+				</div>
+			 </div>
+			 <div style="background: url('images/eqt-hero/hero/eqt-hero-bg.jpg'); background-size:cover">
 			  	<div class="row">
 			  		<div id="eqt-baggage-tractor" class="container eqt eqt-show">
 			  			<div class="col-md-6">
 			  				<div class="eqt-details sec-padding" style="text-align: left; color:#fff;padding-left: 5rem"> 
 				  				<span class="eqt--type" style="display: inline-block;font-weight: bold;text-transform: uppercase;font-size: 2rem">Baggage Tractor</span>
 				  				<h3 class="eqt--name" style="font-size: 7rem; color:#fff">XT560</h3>
-				  				<a class="btn big btn-primary" href="https://avrogse.com/product/5600lb-mdp-gasoline-baggage-tractor/" style="background: #fff;">Learn More</a>
+				  				<a class="btn big btn-primary" href="https://avrogse.com/product/5600lb-mdp-gasoline-baggage-tractor/ " style="background: #fff;">Learn More</a>
 				  				<div class="eqt--related">
 				  					<a href="#" class="btn btn-hollow">XT570D</a><a href="#" class="btn btn-hollow">4,700LB MDP</a>
 				  					<a href="#" class="btn btn-hollow">ST470LA</a><a href="#" class="btn btn-hollow">XT500LI</a>
@@ -365,7 +358,7 @@
 	  </section>
 	  <section class="row sec-padding avro-tracker-section">
 		  <div class="container" style="position: relative">
-	  	<img class="avro-tracker-section--graphic" src="images/resources/avro-tracker.png">
+	  		<img class="avro-tracker-section--graphic" src="images/resources/avro-tracker.png">
 		  	<div class="col-md-6">
 		  		<h2 class="section-heading">Avro Tracker</h2>
 		  		<p>A GPS fleet management solution for your GSE equipment based on the latest advancements in telematics technology, Avro Tracker is a wireless asset management system that provides:</p>
@@ -384,11 +377,11 @@
 		  		<div><a href="#" style="font-weight: bold;">LEVEL 1: Wireless Monitoring GSE Equipment</a></div>
 		  		<div><a href="#" style="font-weight: bold;">LEVEL 2: Wireless Access for Airport GSE</a></div>
 		  		<div style="margin-bottom: 2rem"><a href="#" style="font-weight: bold;">LEVEL 3: Wireless Verification for GSE Operations</a></div>
-		  		<a class="btn btn-primary btn-warning" href="#" style="font-size: 1.4rem; margin-right: 1rem">Request Demo</a>
-		  		<a href="#" class="link--arrowed">Learn More<svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
+		  		<a class="btn btn-primary btn-warning" href="https://avrogse.com/contact-us/" style="font-size: 1.4rem; margin-right: 1rem">Request Demo</a>
+		  		<a href="https://avrogse.com/avro-tracker/" class="link--arrowed">Learn More<svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
 		  	</div>
 		  	<div class="col-md-6">
-		  		<!-- <img src="images/resources/avro-tracker.png"> -->
+		  		<!-- <img src="images/Resourcesces/avro-tracker.png"> -->
 		  	</div>
 		  </div>
 	  </section>
@@ -502,6 +495,7 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html>
