--- a/index.html
+++ b/index.html
@@ -117,23 +117,21 @@
 	  		<div class="masonry-module">
 	  			<div class="tiles tiles--desktop">
 	  				<div class="column">
-	  					<a href="https://avrogse.com/product-category/equipment/" class="tile">
-	  						<div class="tile__image">
-                  <img src="images/resources/service-equipment.png" alt="Avro Equipment">
-		              <div class="webtext-disclaimer webtext-disclaimer__right">
-		                <span style="color:#FFF"></span>
-		              </div>
-		            </div>
-		            <div class="tile__text">
-                    <h2>Equipment</h2>
-                    <div class="btn btn-warning">
-                        LEARN MORE
-                    </div>
-                </div>
+	  					<a href="https://avrogse.com/product-category/equipment/" class="tile" data-aos="flip-left">
+	  						<div class="tile__image" >
+                  				<img src="images/resources/service-equipment.png" alt="Avro Equipment">
+		              			<div class="webtext-disclaimer webtext-disclaimer__right">
+		                			<span style="color:#FFF"></span>
+		              			</div>
+		            		</div>
+		            		<div class="tile__text">
+                    			<h2>Equipment</h2>
+                   				<div class="btn btn-warning">LEARN MORE</div>
+                			</div>
 	  					</a>
 	  				</div>
 	  				<div class="column">
-	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile">
+	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile" data-aos="flip-left">
 	  						<div class="tile__image">
                   <img src="images/resources/service-parts.png" alt="Service & Parts">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -147,7 +145,7 @@
                     </div>
                 </div>
 	  					</a>
-	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/" class="tile">
+	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/" class="tile" data-aos="flip-left">
 	  						<div class="tile__image">
                   <img src="images/resources/service-roi-calc.png" alt="ROI Calculator">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -163,7 +161,7 @@
 	  					</a>
 	  				</div>
 	  				<div class="column">
-	  				<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile">
+	  				<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile" data-aos="flip-left">
 	  						<div class="tile__image">
                   <img src="images/resources/service-avro-tracker.png" alt="Avro Tracker">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -182,7 +180,7 @@
 	  		</div>    
 	    </div>
 	  </section>
-	  <section class="row eqt-hero" style="text-align: center;">
+	  <section class="row eqt-hero" style="text-align: center;" data-aos="zoom-out">
 	  	<div class="container-fluid"> 
 		  	<h2 class="section-heading">Explore Avro</h2>
 		  	<div class="category-selector">
@@ -358,8 +356,10 @@
 	  </section>
 	  <section class="row sec-padding avro-tracker-section">
 		  <div class="container" style="position: relative">
-	  		<img class="avro-tracker-section--graphic" src="images/resources/avro-tracker.png">
-		  	<div class="col-md-6">
+	  		<a href="#" data-aos="fade-up">
+	  			<img class="avro-tracker-section--graphic" src="images/resources/avro-tracker.png">
+	  		</a>
+		  	<div class="col-md-6" data-aos="fade-up">
 		  		<h2 class="section-heading">Avro Tracker</h2>
 		  		<p>A GPS fleet management solution for your GSE equipment based on the latest advancements in telematics technology, Avro Tracker is a wireless asset management system that provides:</p>
 		  		<ul style="padding-left:2rem;margin-bottom: 1.5rem">
@@ -386,7 +386,7 @@
 		  </div>
 	  </section>
 	  <section class="row locations-section">
-	  	<div class="location-section--description">
+	  	<div class="location-section--description" data-aos="fade-right">
 	  		<h2 class="section-heading"><span class="number-of-locations">22</span> Service Airports</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at tellus accumsan, luctus velit vel, vulputate sem. Mauris pellentesque elementum mauris, sed faucibus leo sodales sed. </p>
 					<a href="#" class="link--arrowed">Find Us<svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
@@ -394,7 +394,7 @@
 	  </section>
 	
 		<section class="row" style="overflow:hidden;">
-			<div class="container sec-padding" style="position: relative;">
+			<div class="container sec-padding" style="position: relative;" data-aos="fade-up">
 			<img src="images/resources/customer-testtimonial.png" style="position: absolute;top:0;left:-100px; width:60%">
 				<div class="col-md-6">
 					<div class="subsection-heading invert" style="text-transform: uppercase;color: #fff; font-weight: bold">Spotlight</div>
@@ -423,7 +423,7 @@
 			</div>
 		</section>
 		<section class="row sec-padding" style="background: url(images/resources/dotted-pattern.png) repeat-x; background-color: #fff; background-size: cover">
-			<div class="container">
+			<div class="container" data-aos="fade-down">
 				<div class="col-md-12" style="position: relative">
 					<div class="card-footer">
 						<h3>Contact us today and a friendly representative will assist you.</h3>
