--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
+	<script>
+	  AOS.init();
+	</script>
 </body>
 </html>
      
