--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 		  </div>
 	  </section>
 	  <section class="row locations-section">
-	  	<div class="location-section--description" data-aos="fade-right">
+	  	<div class="location-section--description">
 	  		<h2 class="section-heading"><span class="number-of-locations">22</span> Service Airports</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at tellus accumsan, luctus velit vel, vulputate sem. Mauris pellentesque elementum mauris, sed faucibus leo sodales sed. </p>
 					<a href="#" class="link--arrowed">Find Us<svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32"><g fill="none" stroke="#ff3417" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10"><circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle><path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>0</g></svg></a>
