--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 	    <div class="container">
 	  		<div class="masonry-module">
 	  			<div class="tiles tiles--desktop">
-	  				<div class="column">
-	  					<a href="https://avrogse.com/product-category/equipment/" class="tile" data-aos="flip-left">
+	  				<div class="column" data-aos="flip-left">
+	  					<a href="https://avrogse.com/product-category/equipment/" class="tile" >
 	  						<div class="tile__image" >
                   				<img src="images/resources/service-equipment.png" alt="Avro Equipment">
 		              			<div class="webtext-disclaimer webtext-disclaimer__right">
@@ -130,8 +130,8 @@
                 			</div>
 	  					</a>
 	  				</div>
-	  				<div class="column">
-	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile" data-aos="flip-left">
+	  				<div class="column" data-aos="flip-left">
+	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile">
 	  						<div class="tile__image">
                   <img src="images/resources/service-parts.png" alt="Service & Parts">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -140,12 +140,10 @@
 		            </div>
 		            <div class="tile__text">
                     <h2>Service & Parts</h2>
-                    <div class="btn btn-warning">
-                        LEARN MORE
-                    </div>
+                    <div class="btn btn-warning">LEARN MORE</div>
                 </div>
 	  					</a>
-	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/" class="tile" data-aos="flip-left">
+	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/">
 	  						<div class="tile__image">
                   <img src="images/resources/service-roi-calc.png" alt="ROI Calculator">
 		              <div class="webtext-disclaimer webtext-disclaimer__right">
@@ -160,7 +158,7 @@
                 </div>
 	  					</a>
 	  				</div>
-	  				<div class="column">
+	  				<div class="column" data-aos="flip-left">
 	  				<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile" data-aos="flip-left">
 	  						<div class="tile__image">
                   <img src="images/resources/service-avro-tracker.png" alt="Avro Tracker">
@@ -356,7 +354,7 @@
 	  </section>
 	  <section class="row sec-padding avro-tracker-section">
 		  <div class="container" style="position: relative">
-	  		<a href="#" data-aos="fade-up">
+	  		<a href="https://www.youtube.com/watch?v=64C-JfNZ_hU" data-aos="fade-up">
 	  			<img class="avro-tracker-section--graphic" src="images/resources/avro-tracker.png">
 	  		</a>
 		  	<div class="col-md-6" data-aos="fade-up">
@@ -399,7 +397,7 @@
 				<div class="col-md-6">
 					<div class="subsection-heading invert" style="text-transform: uppercase;color: #fff; font-weight: bold">Spotlight</div>
 					<h2 class="testimonial-video--title">Customer Explains How Avro Stands Out Compared to Well Established Brands</h2>
-					<a class="btn watch-video"  href="#"><i class="fa fa-caret-right"></i> Watch Video</a>
+					<a class="btn watch-video"  href="https://www.youtube.com/watch?v=IggyJACa7Xs"><i class="fa fa-caret-right"></i> Watch Video</a>
 				</div>
 				<div class="col-md-6">
 					<h2 class="section-heading">Recent Updates</h2>
