--- a/index.html
+++ b/index.html
@@ -133,45 +133,41 @@
 	  				<div class="column" data-aos="flip-left">
 	  					<a href="https://avrogse.com/ground-handling-equipment-suppliers-service-parts/" class="tile">
 	  						<div class="tile__image">
-                  <img src="images/resources/service-parts.png" alt="Service & Parts">
-		              <div class="webtext-disclaimer webtext-disclaimer__right">
-		                <span style="color:#FFF"></span>
-		              </div>
-		            </div>
-		            <div class="tile__text">
-                    <h2>Service & Parts</h2>
-                    <div class="btn btn-warning">LEARN MORE</div>
-                </div>
+                  				<img src="images/resources/service-parts.png" alt="Service & Parts">
+		              			<div class="webtext-disclaimer webtext-disclaimer__right">
+		                			<span style="color:#FFF"></span>
+		              			</div>
+		            		</div>
+		            		<div class="tile__text">
+                    			<h2>Service & Parts</h2>
+                    			<div class="btn btn-warning">LEARN MORE</div>
+                			</div>
 	  					</a>
-	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/">
+	  					<a href="https://avrogse.com/calculate-your-cost-savings-with-our-avro-tracker-roi-calculator/" class="tile">
 	  						<div class="tile__image">
-                  <img src="images/resources/service-roi-calc.png" alt="ROI Calculator">
-		              <div class="webtext-disclaimer webtext-disclaimer__right">
-		                <span style="color:#FFF"></span>
-		              </div>
-		            </div>
-		            <div class="tile__text">
-                  <h2>ROI Calculator</h2>
-                  <div class="btn btn-warning">
-                      Calculate Cost
-                  </div>
-                </div>
+                  				<img src="images/resources/service-roi-calc.png" alt="ROI Calculator">
+		              			<div class="webtext-disclaimer webtext-disclaimer__right">
+		                			<span style="color:#FFF"></span>
+		              			</div>
+		            		</div>
+		            		<div class="tile__text">
+                  				<h2>ROI Calculator</h2>
+                 				<div class="btn btn-warning">Calculate Cost</div>
+                			</div>
 	  					</a>
 	  				</div>
 	  				<div class="column" data-aos="flip-left">
-	  				<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile" data-aos="flip-left">
+	  					<a href="https://avrogse.com/avro-tracker-aircraft-support-equipment/" class="tile" data-aos="flip-left">
 	  						<div class="tile__image">
-                  <img src="images/resources/service-avro-tracker.png" alt="Avro Tracker">
-		              <div class="webtext-disclaimer webtext-disclaimer__right">
-		                <span style="color:#FFF"></span>
-		              </div>
-		            </div>
-		            <div class="tile__text">
-                  <h2>Avro Tracker</h2>
-                  <div class="btn btn-warning">
-                      LEARN MORE
-                  </div>
-                </div>
+                  				<img src="images/resources/service-avro-tracker.png" alt="Avro Tracker">
+					            <div class="webtext-disclaimer webtext-disclaimer__right">
+					            	<span style="color:#FFF"></span>
+					            </div>
+		            		</div>
+		            		<div class="tile__text">
+			                  <h2>Avro Tracker</h2>
+			                  <div class="btn btn-warning">LEARN MORE</div>
+                			</div>
 	  					</a>
 	  				</div>
 	  			</div>
